Project 4: Update build scripts for JavaFX SDK module path